# mcp_chatbot

./: .gitignore  README.md  mcp_chatbot.py  mcp_client_manager.py  pyproject.toml  research_server.py  servers.json
.github/workflows/: lint.yml
papers/clear/: papers_info.json
papers/exit/: papers_info.json
papers/give_me_top_2_most_relevant_papers_on_running_dynamics/: papers_info.json
papers/latest_research_papers_around_orcas./: papers_info.json
papers/papers_around_black_holes_,_give_me_top_2_of_them./: papers_info.json
papers/papers_around_dementia/: papers_info.json
papers/papers_around_physics_top_2/: papers_info.json
papers/papers_around_quiantum_physics,_top_2_of_them/: papers_info.json
papers/physics_recent_research_papers/: papers_info.json
papers/recent_papers_around_physics_top_2_of_them/: papers_info.json
papers/research_papers_in_physics,_give_me_top_2_results./: papers_info.json
papers/running/: papers_info.json
